[gd_scene load_steps=13 format=3 uid="uid://dobxqawvevo1c"]

[ext_resource type="Theme" uid="uid://d1stc5w463lhk" path="res://themes/battle_ui_theme.tres" id="1_mbypn"]
[ext_resource type="Script" uid="uid://bw46h20qkjh4b" path="res://scripts/ui/battle_results/battle_results_controller.gd" id="1_trplm"]
[ext_resource type="PackedScene" uid="uid://by8g0yvkqnaa2" path="res://nodes/ui/battle_results/party_member_exp_layout.tscn" id="2_axbiq"]
[ext_resource type="PackedScene" uid="uid://betrrsabn7xnw" path="res://nodes/ui/transitions/transition_button.tscn" id="3_ecdt6"]
[ext_resource type="PackedScene" uid="uid://tmt61ye5ah2m" path="res://nodes/ui/battle_results/item_loot_icon.tscn" id="3_y1ir7"]
[ext_resource type="Script" uid="uid://its7gcid3st0" path="res://scripts/ui/battle_results/item_loot_controller.gd" id="3_yqeet"]
[ext_resource type="Script" uid="uid://c3tqahdhpx2tm" path="res://scripts/ui/battle_results/party_member_controller.gd" id="4_4p8jk"]
[ext_resource type="Texture2D" uid="uid://bfqqnu3g3mts4" path="res://assets/kenney_emotes-pack/PNG/Vector/Style 4/emote_idea.png" id="6_qb51y"]
[ext_resource type="Texture2D" uid="uid://bqcqjwwsth2i" path="res://assets/kenney_emotes-pack/PNG/Vector/Style 2/emote_idea.png" id="7_f0yxx"]
[ext_resource type="Texture2D" uid="uid://b0bx8x2xdcb2g" path="res://assets/kenney_emotes-pack/PNG/Vector/Style 3/emote_idea.png" id="8_3obmc"]
[ext_resource type="Texture2D" uid="uid://d1labisc8bslt" path="res://assets/kenney_emotes-pack/PNG/Vector/Style 4/emote_star.png" id="9_mwr7c"]
[ext_resource type="PackedScene" uid="uid://5hcous0cjeie" path="res://nodes/ui/transitions/transition_layer.tscn" id="12_ffxxn"]

[node name="BattleResultsScreen" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.270588, 0.266667, 0.309804, 1)
script = ExtResource("1_trplm")

[node name="RootContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="RootContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="RootContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 400

[node name="BattleResultsContainer" type="VBoxContainer" parent="RootContainer/VBoxContainer/TopContainer"]
layout_mode = 2

[node name="BattleResultsLabel" type="Label" parent="RootContainer/VBoxContainer/TopContainer/BattleResultsContainer"]
layout_mode = 2
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 60
text = "Battle Results"

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer/VBoxContainer/TopContainer/BattleResultsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ExpEarnedLabel" type="Label" parent="RootContainer/VBoxContainer/TopContainer/BattleResultsContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 28
text = "Exp Earned:"

[node name="ExpValue" type="Label" parent="RootContainer/VBoxContainer/TopContainer/BattleResultsContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 28
text = "1000"

[node name="TransitionButton" parent="RootContainer/VBoxContainer/TopContainer" node_paths=PackedStringArray("transition_fade") instance=ExtResource("3_ecdt6")]
layout_mode = 2
transition_fade = NodePath("../../../../TransitionLayer")
scene_path = "res://nodes/ui/crafting_screen.tscn"

[node name="BodyContainer" type="HBoxContainer" parent="RootContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PartyMemberContainer" type="MarginContainer" parent="RootContainer/VBoxContainer/BodyContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="RootContainer/VBoxContainer/BodyContainer/PartyMemberContainer"]
layout_mode = 2
script = ExtResource("4_4p8jk")

[node name="PartyMemberExpLayout" parent="RootContainer/VBoxContainer/BodyContainer/PartyMemberContainer/VBoxContainer" instance=ExtResource("2_axbiq")]
visible = false
layout_mode = 2

[node name="PartyMemberExpLayout2" parent="RootContainer/VBoxContainer/BodyContainer/PartyMemberContainer/VBoxContainer" instance=ExtResource("2_axbiq")]
visible = false
layout_mode = 2

[node name="PartyMemberExpLayout3" parent="RootContainer/VBoxContainer/BodyContainer/PartyMemberContainer/VBoxContainer" instance=ExtResource("2_axbiq")]
visible = false
layout_mode = 2

[node name="PartyMemberExpLayout4" parent="RootContainer/VBoxContainer/BodyContainer/PartyMemberContainer/VBoxContainer" instance=ExtResource("2_axbiq")]
visible = false
layout_mode = 2

[node name="LootDescriptionLayout" type="VBoxContainer" parent="RootContainer/VBoxContainer/BodyContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 30
script = ExtResource("3_yqeet")

[node name="TopContainer" type="VBoxContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout"]
layout_mode = 2

[node name="LootLabel" type="Label" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/TopContainer"]
layout_mode = 2
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 32
text = "Loot Obtained"

[node name="ItemLabelContainer" type="HBoxContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/TopContainer"]
layout_mode = 2

[node name="SelectedItemLabel" type="Label" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/TopContainer/ItemLabelContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 24

[node name="QuantityLabel" type="Label" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/TopContainer/ItemLabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 24

[node name="ItemsContainer" type="VBoxContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SelectedItemContainer" type="HBoxContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SelectedItem" type="TextureRect" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/SelectedItemContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 2
expand_mode = 3
stretch_mode = 5

[node name="DescriptionScroll" type="ScrollContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/SelectedItemContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 10

[node name="DescriptionLabel" type="Label" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/SelectedItemContainer/DescriptionScroll"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme = ExtResource("1_mbypn")
theme_override_font_sizes/font_size = 16
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ItemLootGrid" type="GridContainer" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 4

[node name="ItemLootIcon" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2
loot_icon = ExtResource("7_f0yxx")
loot_name = "1st bulb"
quantity = 5
description = "Lightbulbs are cool"

[node name="ItemLootIcon2" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2
loot_icon = ExtResource("8_3obmc")
loot_name = "2nd bulb"
quantity = 32

[node name="ItemLootIcon3" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2
loot_icon = ExtResource("6_qb51y")
loot_name = "3rd bulb"
quantity = 18
description = "Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat praesent sollicitudin auctor integer nisi aliquam duis feugiat primis. Himenaeos placerat aenean, maecenas dis varius dolor. Habitant ante justo sapien dui aptent turpis. Suscipit elit massa dignissim interdum urna nostra risus neque. Odio sociosqu habitasse justo, egestas magna dis non. Nascetur rutrum cubilia proin posuere nulla aliquam. Commodo ornare ex morbi per primis ut tempor. Nascetur fermentum risus dis pellentesque turpis felis."

[node name="ItemLootIcon4" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2
loot_icon = ExtResource("9_mwr7c")
loot_name = "flower power"
quantity = 2
description = "Up the stacks!"

[node name="ItemLootIcon5" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon6" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon7" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon8" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon9" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon10" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon11" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="ItemLootIcon12" parent="RootContainer/VBoxContainer/BodyContainer/LootDescriptionLayout/ItemsContainer/ScrollContainer/ItemLootGrid" instance=ExtResource("3_y1ir7")]
visible = false
layout_mode = 2

[node name="TransitionLayer" parent="." instance=ExtResource("12_ffxxn")]
layout_mode = 1
